2014-08-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (pushSide, genPcall): fixed bug with pointer
	  function call overwriting register parameter with function
	  address. Optimized constant function pointer case.

2014-08-06 Ben Shi <powerstudio1st AT 163.com>
	* sdas/linksrc/lkaomf51.c:
	  Add array bound check to avoid crash.

2014-07-30 Ben Shi <powerstudio1st AT 163.com>
	* sim/ucsim/st7.src/inst.cc:
	  Eliminate warnings.
	* support/regression/tests/gcc-torture-execute-930628-1.c:
	  Enable this case for the stm8 port.

2014-07-29 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Enable this case for the stm8 port.
	* src/stm8/gen.c:
	  Fix bug #2285: an error in genCast().

2014-07-22 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/optimize_pic16devices.pl,
	  device/include/pic16/pic16devices.txt:
	  Stronger optimization.

2014-07-21 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-stdarg-4.c:
	* support/regression/tests/gcc-torture-execute-stdarg-5.c:
	  Split the original gcc-torture-execute-stdarg-4.c to inline / non-inline.

2014-07-20 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-stdarg-4.c:
	* support/regression/tests/gcc-torture-execute-loop-2c.c:
	* support/regression/tests/gcc-torture-execute-unroll-1.c:
	  Add "static" to fit the C99 standard.

2014-07-19 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-20001121-1.c:
	  Add "static" to fit the C99 standard.

2014-07-15 Ben Shi <powerstudio1st AT 163.com>
	* src/stm8/peep.c
	  Make calculation of instructions' length more accurate.

2014-07-14 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/non-free/include/pic14/pic16f1yyy.h:
	  Added the missing DEBUG config option to the enhanced midrange MCUs.

2014-07-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
